--- a/web/media/css/base.css
+++ b/web/media/css/base.css
@@ -391,10 +391,10 @@ table#count_summary .help {
 .homebutton {
     position: absolute;
     top: 0px;
-    right:0px;
+    left:0px;
     width: 100px;
     min-height: 20px;
-    background: darkgray;
+    background: black;
     text-align:center;
     font-size: 1.5em;
 }
@@ -406,4 +406,15 @@ table#count_summary .help {
 
 td.translated {
     background-color:lightgreen;
+}
+
+h3 {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color:white;
+    padding: 4px;
+}
+
+pre:focus {
+    background-color: white;
 }
